--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
 }
 
+
 #intro .carousel-item::before {
   content: '';
   background-color: rgba(0, 0, 0, 0.7);
@@ -212,9 +213,17 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+
+
 @media (max-width: 768px) {
   #intro h2 {
-    font-size: 28px;
+    font-size: 20px;
+    margin: 0;
+    text-transform: capitalize;
+    color: #f8f9fa;
+    font-weight: bolder;
+    text-align: center;
+    padding: 43px;
   }
 }
 
@@ -323,6 +332,7 @@ h1, h2, h3, h4, h5, h6 {
   {
     padding-left: 20px;
     padding-right: 20px;
+    padding-top: 38px;
   }
 
   #about-us h1
@@ -480,7 +490,7 @@ h1, h2, h3, h4, h5, h6 {
 #mobile-nav-toggle {
   position: fixed;
   right: 0;
-  top: 8px;
+  top: 5px;
   z-index: 999;
   margin: 32px 20px 0 0;
   border: 0;
@@ -505,7 +515,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Mobile Nav Styling */
 #mobile-nav {
   position: fixed;
-  top: 0;
+  top: 16px;
   padding-top: 18px;
   bottom: 0;
   z-index: 998;
@@ -711,10 +721,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col {
-  background: #fff;
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   margin-bottom: 20px;
+  padding-top: 20px;
 }
 
 #about .about-col .img {
@@ -759,9 +767,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #000;
   text-align: center;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 17px;
   padding: 0;
   margin: 40px 0 12px 0;
+  text-transform: uppercase;
+  color: #666666;
 }
 
 #about .about-col h2 a {
@@ -774,10 +784,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-col p {
   font-size: 14px;
-  line-height: 24px;
-  color: #333;
+  line-height: 21px;
+  color: #818181;
   margin-bottom: 0;
   padding: 0 20px 20px 20px;
+  text-align: center;
+}
+
+.padding
+{
+  padding: 0px 8px 0px 0px;
 }
 
 /* Services Section
@@ -1427,6 +1443,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     border-color: transparent!important;
     clear: both;
 }
+
 
 /*--------------------------------------------------------------
 # Footer
